Swagger for users endpoints
