# handlers/user/handler.go
@@ -23,14 +23,24 @@ func New(svc services.User) handlers.User {
 // @Accept json
 // @Produce json
 // @Security ApiKey
-// @Param user body handlers.CreateUserBody true "User Request"
+// @Param user body handlers.UserBody true "User Request"
 // @Param X-User-ID header string true "External identifier of the user"
-// @Success 201 {object} entities.User
+// @Success 201 {object} handlers.UserResponse
 // @Router /v1/users [post]
 func (h *handler) Create(ctx *gofr.Context, req *handlers.CreateUser) (*entities.User, error) {
 	return h.svc.Create(ctx, &services.CreateUser{ID: req.UserID, Name: req.Name})
 }
 
+// @Summary Update a user
+// @Description Update a user and return the updated user.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Security ApiKey
+// @Param user body handlers.UserBody true "User Request"
+// @Param X-User-ID header string true "External identifier of the user"
+// @Success 200 {object} handlers.UserResponse
+// @Router /v1/users [patch]
 func (h *handler) Update(ctx *gofr.Context, req *handlers.UpdateUser) (*entities.User, error) {
 	return h.svc.Update(ctx, &services.UpdateUser{ID: req.UserID, Name: req.Name})
 }
@@ -44,12 +54,21 @@ func (h *handler) Update(ctx *gofr.Context, req *handlers.UpdateUser) (*entities
 // @Param X-User-ID header string false "External identifier of the user"
 // @Param page query int false "Page number"
 // @Param size query int false "Users per page"
-// @Success 200 {object} []entities.User
+// @Success 200 {object} handlers.UsersResponse
 // @Router /v1/users [get]
 func (h *handler) List(ctx *gofr.Context, req *handlers.ListUsers) ([]*entities.User, error) {
 	return h.svc.List(ctx, &services.ListUsers{UserID: req.UserID, Page: req.Page, Size: req.Size})
 }
 
+// @Summary Delete a user
+// @Description Delete a user.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Security ApiKey
+// @Param X-User-ID header string true "External identifier of the user"
+// @Success 204
+// @Router /v1/users [delete]
 func (h *handler) Delete(ctx *gofr.Context, req *handlers.DeleteUser) error {
 	return h.svc.Delete(ctx, &services.DeleteUser{ID: req.UserID})
 }
